tests/ty-var-annot-06/out.txt
error: mismatched types: expected int, found bool
  ┌─ err.sml:2:9
  │
2 │ val _ = apply op+ (1, false)
  │         ^^^^^^^^^^^^^^^^^^^^

typechecking failed
